@@ -495,6 +495,7 @@ All (GUI):
 - Added support for reading image resolutions from PNG images (scottb).
 - wxComboCtrl, wxOwnerDrawnComboBox: better support for themed and custom
   panel backgrounds, especially on OS X.
+- Add WXK_CONTROL_A..WXK_CONTROL_Z constants (Jan van Dijk).
 
 GTK:
 
